🎨 [REFACTOR] : Ultrasonic Library Standards and Structure
This commit focuses on enhancing the ultrasonic library's structure, performance, and code formatting while maintaining its general API behavior. The following highlights summarize the changes made:

- Use of struct data types for sensor configuration parameters
- Improve formatting and code structure
- Modular and easy-to-modify functions

🚧 Note: This module is currently provided and tested for a single ultrasonic sensor connected to the MCU board. Scripts for handling multiple ultrasonic sensors will be developed soon.

The "ultrasonic" library provides four main functions for operating HC-SRF04 ultrasonic sensors or similar sensors that utilize Trig and Echo signals to measure distance:

▪️ LRL_US_Init: This function initializes the ultrasonic sensor and starts the timer.
▪️ LRL_US_Trig: It triggers the ultrasonic sensor for a duration of 15 microseconds.
▪️ LRL_US_TMR_OVF_ISR: This interrupt service routine handles timer overflow for quantized measurement of the time difference of the echo signal. It should be called inside the HAL_TIM_PeriodElapsedCallback function.
▪️ LRL_US_TMR_IC_ISR: This interrupt service routine handles the input capture event during distance measurement. It should be called inside the HAL_TIM_IC_CaptureCallback function.
▪️ LRL_US_Read: This function returns the measured distance in centimeters.
To configure sensor-specific parameters like Timer channels and clock, the user can utilize a structure called ultrasonic_cfgType. This structure can be modified in the main script, the mcu_layout.h header file, or a separate module dedicated to initializing sensor information (e.g., ultrasonic_config.h).

It is recommended to define the sensor configuration in the mcu_layout.h header file since it encompasses all the MCU board macros and parameters. This ensures a centralized and comprehensive configuration setup.

--- a/scripts/Debug/makefile
+++ b/scripts/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: Lenna-Bardia-MCU-Board.elf secondary-outputs
 
 # Tool invocations
-Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.map: $(OBJS) $(USER_OBJS) C:\Users\arian\OneDrive\Documents\GitHub\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Lenna-Bardia-MCU-Board.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\arian\OneDrive\Documents\GitHub\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lenna-Bardia-MCU-Board.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.map: $(OBJS) $(USER_OBJS) E:\Repositories\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Lenna-Bardia-MCU-Board.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Repositories\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lenna-Bardia-MCU-Board.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
