:sparkles:  [ADD] : added the developed libraries
these libraries were created and developed previously on simulation branch now moved on this branch for more clear programming
- imu.c and imu.h
- pid.c and pid.h
- motion.c and motion.h
- utilities.c and utilities.h
- ultrasonic.c and ultrasonic.h

--- a/scripts/Debug/makefile
+++ b/scripts/Debug/makefile
@@ -54,14 +54,15 @@ Lenna-Bardia-MCU-Board.list \
 
 
 # All Target
-all: main-build
+all:
+	+@$(MAKE) --no-print-directory main-build && $(MAKE) --no-print-directory post-build
 
 # Main-build Target
 main-build: Lenna-Bardia-MCU-Board.elf secondary-outputs
 
 # Tool invocations
-Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.map: $(OBJS) $(USER_OBJS) E:\Repositories\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Lenna-Bardia-MCU-Board.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Repositories\LMR-MCU-Board\scripts\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lenna-Bardia-MCU-Board.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.map: $(OBJS) $(USER_OBJS) C:\Users\arian\OneDrive\Documents\GitHub\LMR-MCU-Board\MATLAB\System-Identification\scripts\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Lenna-Bardia-MCU-Board.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\arian\OneDrive\Documents\GitHub\LMR-MCU-Board\MATLAB\System-Identification\scripts\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lenna-Bardia-MCU-Board.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -80,6 +81,10 @@ clean:
 	-$(RM) Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.list Lenna-Bardia-MCU-Board.map default.size.stdout
 	-@echo ' '
 
+post-build:
+	arm-none-eabi-objcopy -O ihex Lenna-Bardia-MCU-Board.elf Lenna-Bardia-MCU-Board.hex
+	-@echo ' '
+
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
 
 fail-specified-linker-script-missing:
@@ -89,6 +94,6 @@ fail-specified-linker-script-missing:
 warn-no-linker-script-specified:
 	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
 
-.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified
+.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified post-build
 
 -include ../makefile.targets
